AuthGoogle **Falta poner estilos en account**

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,18 +1,29 @@
-<div class="d-flex flex-column align-items-center">
-  <img   alt="fotoperfil" src="https://i.pinimg.com/474x/bd/f4/d3/bdf4d3fe1f9a17136319df951fe9b3e0.jpg"
-  class="rounded-circle w-10 h-10 mt-3">
-  <h2 class="text-3xl my-3">Nombre completo: <ng-container *ngIf="customer">{{ customer.fullName   }}</ng-container></h2>
-  <h2 class="text-xl font-weight-bold">Id de Cuenta: <ng-container *ngIf="accountType">{{ accountType.id }}</ng-container></h2>
-  <h2 class="text-xl font-weight-bold">Tipo de Cuenta: <ng-container *ngIf="accountType">{{ accountType.name }}</ng-container></h2>
-  <p class="text-lg font-medium my-2">Balance: <span class="font-bold">$100</span></p>
-  <button  (click)="openEditModal()"  type="button" class="btn btn-primary my-3 py-2 px-4">Agregar tipo de cuenta</button>
-  <br>
-  <button  (click)="openEditModal2()"  type="button" class="btn btn-primary my-3 py-2 px-4">Agregar depósito</button>
-  <br>
-
-  <button [routerLink]="['/customer']" type="button" class="btn btn-danger my-3 py-2 px-4">Cambios de cuenta</button>
+<div class="d-flex align-items-center" style="background-color: rgba(255, 255, 255, 0.5);">
+  <div class="container">
+    <div class="d-flex justify-content-between">
+      <div class="d-flex flex-column align-items-start">
+        <div class="my-3">
+          <button (click)="openEditModal()" class="btn btn-primary">Agregar tipo de cuenta</button>
+        </div>
+        <div class="my-3">
+          <button (click)="openEditModal2()" class="btn btn-primary">Agregar depósito</button>
+        </div>
+      </div>
+      <div class="d-flex flex-column" style="width: 250px;">
+        <img alt="fotoperfil" [src]="customer?.avatarUrl || 'https://i.pinimg.com/474x/bd/f4/d3/bdf4d3fe1f9a17136319df951fe9b3e0.jpg'" class="rounded-circle w-100 h-100 mt-3">
+        <h4 class="mt-3">Nombre completo: <ng-container *ngIf="customer">{{ customer.fullName }}</ng-container></h4>
+        <h4 class="font-weight-bold mt-3">Id de Cuenta: <ng-container *ngIf="accountType">{{ accountType.id }}</ng-container></h4>
+        <h4 class="font-weight-bold mt-3">Tipo de Cuenta: <ng-container *ngIf="accountType">{{ accountType.name }}</ng-container></h4>
+        <p class="mt-3">Balance: <span class="font-weight-bold">$100</span></p>
+      </div>
+      <div class="d-flex flex-column align-items-end">
+        <div class="my-3">
+          <button [routerLink]="['/customer']" class="btn btn-danger">Cambios de cuenta</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
 
 <ng-template #content let-modal>
   <div class="modal-header">
