--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column align-items-center">
-  <img alt="fotoperfil" src="https://i.pinimg.com/474x/bd/f4/d3/bdf4d3fe1f9a17136319df951fe9b3e0.jpg"
-  class="rounded-circle img-fluid w-10 mb-3">
+  <img alt="fotoperfil" [src]="customer?.avatarUrl || 'https://i.pinimg.com/474x/bd/f4/d3/bdf4d3fe1f9a17136319df951fe9b3e0.jpg'" class="rounded-circle w-10 h-10 mt-3">
+
   <h2 class="text-xl font-weight-bold">Nombre completo:  <ng-container *ngIf="customer">{{ customer.fullName }}</ng-container></h2>
   <h2 class="text-xl font-weight-bold">Documento: <ng-container *ngIf="customer">{{ customer.documentType.name }}</ng-container></h2>
   <h2 class="text-xl font-weight-bold">Documento ID: <ng-container *ngIf="customer">{{ customer.documentType.id }}</ng-container></h2>
