--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,20 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  background-image: url(https://cdn.businessinsider.es/sites/navi.axelspringer.es/public/media/image/2020/11/apreton-manos-2137869.jpg?tf=3840x);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+@keyframes background-animation {
+  0% {
+    background-color: #333;
+  }
+  50% {
+    background-color: #2d2d2d;
+  }
+  100% {
+    background-color: #101010;
+  }
+}
