Title: correccion menu
cambio de ruta

--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -12,7 +12,7 @@
       <p [routerLink]="['/ejercicio']">ejercicio</p ><a ></a>
     </button>
     <button >
-      <p [routerLink]="['/profile']">account</p ><a ></a>
+      <p [routerLink]="['/Myaccount']">account</p ><a ></a>
     </button>
     <button >
       <p [routerLink]="['/profile']">transfer</p ><a ></a>
