--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -45,9 +45,9 @@
               -->
               <div id="userDropdown" *ngIf="userDropdown === true" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
                 <!-- Active: "bg-gray-100", Not Active: "" -->
-                <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-200 text-gray-700 text-center" role="menuitem" tabindex="-1" id="user-menu-item-0">Tu perfil</a>
-                <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-200 text-gray-700 text-center" role="menuitem" tabindex="-1" id="user-menu-item-1">Opciones</a>
-                <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-200 text-gray-700 text-center" role="menuitem" tabindex="-1" id="user-menu-item-2">Cerrar sesión</a>
+                <a class="block px-4 py-2 text-sm hover:bg-gray-200 text-gray-700 text-center" role="menuitem" tabindex="-1" id="user-menu-item-0">Tu perfil</a>
+                <a class="block px-4 py-2 text-sm hover:bg-gray-200 text-gray-700 text-center" role="menuitem" tabindex="-1" id="user-menu-item-1">Opciones</a>
+                <a (click)="logout()" class="block px-4 py-2 text-sm hover:bg-gray-200 text-gray-700 text-center" role="menuitem" tabindex="-1" id="user-menu-item-2">Cerrar sesión</a>
               </div>
             </div>
           </div>
