--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body {
+html,
+body {
   height: 60%;
 }
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: black;
-  background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(../src/assets/img/background02.png);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../src/assets/img/background02.png);
   background-size: cover;
 }
 
 
 
-.container{
+.container {
   margin-left: 100px;
   margin-right: 100px;
   margin-top: 5px;
@@ -26,4 +28,5 @@ body {
 .footer {
   position: fixed;
   bottom: 5;
-  }
+}
+
