--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -29,7 +29,7 @@
               <div>
                 <button type="button" (click)="userDropdownSwitch()" class="flex max-w-xs items-center rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
                   <span class="sr-only">Abrir menu de usuario</span>
-                  <img class="h-8 w-8 rounded-full" src="https://yt3.ggpht.com/ytc/AMLnZu8QsSEu3Mi6gXxvOK6gRy8u-yjLhbdLYfOi7cz0=s900-c-k-c0x00ffffff-no-rj" alt="">
+                  <img class="h-8 w-8 rounded-full" src="{{this.auth.currentUser?.customer?.avatarUrl || '/assets/avatar/default-avatar.jpg'}}" alt="">
                 </button>
               </div>
 
@@ -89,11 +89,11 @@
       <div class="border-t border-gray-700 pt-4 pb-3">
         <div class="flex items-center px-5">
           <div class="flex-shrink-0">
-            <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+            <img class="h-10 w-10 rounded-full" src="{{this.auth.currentUser?.customer?.avatarUrl || '/assets/avatar/default-avatar.jpg'}}" alt="">
           </div>
           <div class="ml-3">
-            <div class="text-base font-medium leading-none text-white">Tom Cook</div>
-            <div class="text-sm font-medium leading-none text-gray-400">tom@example.com</div>
+            <div class="text-base font-medium leading-none text-white">{{this.auth.currentUser?.customer?.fullName}}</div>
+            <div class="text-sm font-medium leading-none text-gray-400">{{this.auth.currentUser?.customer?.email}}</div>
           </div>
           <button type="button" class="ml-auto flex-shrink-0 rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
             <span class="sr-only">Ver notificaciones</span>
@@ -104,11 +104,9 @@
           </button>
         </div>
         <div class="mt-3 space-y-1 px-2">
-          <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Your Profile</a>
-
-          <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Settings</a>
-
-          <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Sign out</a>
+          <a class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Tu perfil</a>
+          <a class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Opciones</a>
+          <a (click)="logout()" class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Cerrar sesión</a>
         </div>
       </div>
     </div>
