--- a/src/app/login/singup/singup.component.html
+++ b/src/app/login/singup/singup.component.html
@@ -1,12 +1,21 @@
-<section class="form-register"  *ngIf="(true)">
-    <h4>Sign Up</h4>
-    <form>
-      <input class="controls" type="text" id="tipo" name="tipo"  placeholder="Usuario">
-      <input class="controls" type="text" id="nombre" name="nombre"  placeholder="Contraseña">
-        <input class="controls" type="text" id="nombre" name="nombre"  placeholder="Nombre completo">
-  
-      <p>Ya casi terminamos!</p>
-      <button class="boton" type="submit" >Guardar</button>
-      <p>¡Listo!</p>
-    </form>
-  </section>
+
+
+
+
+<section class="form-register"  *ngIf= "(serviceLogIn.switchLogUp)" >
+  <h4>Sign Up</h4>
+  <form>
+    <input class="controls" type="text" id="tipo" name="tipo"  placeholder="Usuario">
+    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="Tipo de documento">
+    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="N° Documento">
+    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="Nombre Completo">
+    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="Teléfono">
+    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="e-mail">
+    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="Contraseña">
+    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="img Avatar">
+     
+    <button class="boton"  (click)="true"  >Sign Up</button>
+   
+    <p>Ya estás registrado?</p> <a class= "link"  href="">Ingresar!</a>
+  </form>
+</section>
