--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -1,32 +1,11 @@
 
 
-
-
 <section class="home"> <!-- ESTA ES TODA LA VENTANA DE MI HOME -->
     <div class="cover"> <!-- COVER TRANSPARENCIA NEGRA-->
-      <div class="content"> <!-- ESTE ES EL CONTENIDO DE MI HOME -->  
-          <app-singin></app-singin>   
-      </div>
-    </div>
-  </section>
-
-  
-
-  <!--
-
-    <section class="home"> 
-      <div class="cover"> 
-        <div class="content"> 
-          <h1>e-Banking</h1>
-          <p>Bienvenido a e-Banking App<br>Tu dinero siempre en buenas manos!</p>
-          <div>
-            <button class="btn-home1" [routerLink]="['/app-vista-agregar-naves']" >TRANSFERENCIAS</button>
-            <button class="btn-home2" >DEPOSITOS</button>
-          </div>
+        <div class="content"> <!-- ESTE ES EL CONTENIDO DE MI HOME -->  
+            <app-singup></app-singup>
+            <app-singin></app-singin>
         </div>
-      </div>
-    </section>
+    </div>
+</section>
 
-
-
-  -->
