--- a/src/app/shared/home/home.component.scss
+++ b/src/app/shared/home/home.component.scss
@@ -1,3 +1,5 @@
+
+/*
 .home {
     width: 100%;
     height: 100vh;
@@ -5,17 +7,19 @@
     background-size: cover;
     background-position: center;
   }
+
   
   .cover{
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.36); /*DE ESTA MANERA LA OPACIDAD SOLO SE LE HACE A ESTE ELEMENTO Y NO A LO QUE ESTA DENTRO DE EL*/
+    background-color: rgba(0, 0, 0, 0.36); //DE ESTA MANERA LA OPACIDAD SOLO SE LE HACE A ESTE ELEMENTO Y NO A LO QUE ESTA DENTRO DE EL
     display: flex;
     align-items: center;
     justify-content: center;
   
   }
-  
+  */
+
   .content {
     text-align: center;
     font-size: 18px;
