Week 3 - Day 4 - Synchronization
+ README updated
+ environment folder added
+ some unused components, modules and folders removed
+ simplification of tree structure

What is working:

+ landing page
+ navbar
+ login
+ desktop page

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   <button class="navbar-button" mat-fab extended color="accent" routerLink="/signup">
     <mat-icon>assignment_ind</mat-icon> Sign Up
   </button>
-  <button class="navbar-button" mat-fab extended color="accent" routerLink="/login">
+  <button class="navbar-button" mat-fab extended color="accent" routerLink="/signin">
     <mat-icon>login</mat-icon> Login
   </button>
 </mat-toolbar>
@@ -14,17 +14,17 @@
     <span routerLink="/desktop" >Virtual Banking APP - User Desktop </span>
     <span class="spacer"></span>
 
-    <button class="desk-navbar-button" mat-raised-button routerLink="/operation">
-      <mat-icon>assignment_ind</mat-icon> Operations
+    <button class="desk-navbar-button" mat-raised-button routerLink="/profile">
+      <mat-icon>assignment_ind</mat-icon> Profile
     </button>
 
-    <button class="desk-navbar-button" mat-raised-button routerLink="/administration">
+   <!--  <button class="desk-navbar-button" mat-raised-button routerLink="/administration">
       <mat-icon>assignment_ind</mat-icon> Administration
     </button>
 
     <button class="desk-navbar-button" mat-raised-button routerLink="/management">
       <mat-icon>assignment_ind</mat-icon> Management
-    </button>
+    </button> -->
 
     <span class="spacer"></span>
     <button class="navbar-button" mat-fab extended color="accent" (click)="logout()">
