Changed bad name of login components and added error type

--- a/src/app/login/sign-in/sign-in.component.html
+++ b/src/app/login/sign-in/sign-in.component.html
@@ -24,6 +24,10 @@
                   </div>
               </div>
 
+              <div *ngIf="this.error.state" class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
+                <span class="font-medium">Error:</span> {{error.description}}
+              </div>
+
               <div class="flex items-center">
                   <input type="checkbox" name="remember" id="remember" formControlName="remember" class="mr-2 focus:ring-0 rounded">
                   <label for="remember" class="text-gray-700">Recuerdame</label>
