--- a/src/app/modules/shared/footer/footer.component.scss
+++ b/src/app/modules/shared/footer/footer.component.scss
@@ -5,7 +5,7 @@ footer {
   background-color: #45a1ff;
   color: #fff;
 
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 40px;
