--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,5 @@
-<p>login works!</p>
 
+<h1 class="Greet"> Bienvenidos </h1>
+
+<h2 style="text-align: center; margin-top: 50px;"> Please login ... </h2>
 <router-outlet></router-outlet>
