--- a/src/app/login/sign-up/sign-up.component.html
+++ b/src/app/login/sign-up/sign-up.component.html
@@ -7,6 +7,11 @@
           <p class="text-center text-sm text-gray-600 mt-2">¿Ya tienes una cuenta? <a (click)="redirect('sign-in')" class="text-blue-600 hover:text-blue-700 hover:underline">Inicia sesión aquí</a></p>
 
           <form [formGroup]="signupForm" (ngSubmit)="onSubmit()" class="my-8 text-sm">
+
+              <div *ngIf="this.error.state" class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
+                <span class="font-medium">Error:</span> {{error.description}}
+              </div>
+
               <div class="flex flex-col my-4">
                   <label for="name" class="text-gray-700">Nombre</label>
                   <input type="text" name="name" id="name" formControlName="name" class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduzca su nombre" required>
@@ -38,17 +43,6 @@
                   <label for="password" class="text-gray-700">Contraseña</label>
                   <div class="relative flex items-center mt-2">
                       <input name="password" id="password" formControlName="password" class="flex-1 p-2 border pr-10 border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Ingresa tu contraseña" [type]="this.show ? 'password' : 'text'" required>
-                      <button (click)="switchPassword()" type="button" class="absolute right-2 bg-transparent flex items-center justify-center text-gray-700">
-                          <svg *ngIf="show" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21"></path></svg>
-                          <svg *ngIf="!show" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
-                      </button>
-                  </div>
-              </div>
-
-              <div class="flex flex-col my-4">
-                  <label for="password_confirmation" class="text-gray-700">Confirmar contraseña</label>
-                  <div class="relative flex items-center mt-2">
-                      <input name="password_confirmation" id="password_confirmation" formControlName="password_confirmation" class="flex-1 p-2 pr-10 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduce tu contraseña una vez más" [type]="this.show ? 'password' : 'text'" required>
                       <button (click)="switchPassword()" type="button" class="absolute right-2 bg-transparent flex items-center justify-center text-gray-700">
                           <svg *ngIf="show" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21"></path></svg>
                           <svg *ngIf="!show" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
