HttpClientModule added to appModule
+ added HTTP Client capabiliy
+ authService simplified ( removed redundant authentications )
+ some components updated

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" *ngIf="(authService.authenticated$ | async) === false; else privateNavbar">
+<mat-toolbar color="primary" *ngIf="(authService.getUserStatus()) === false; else privateNavbar">
   <span (click)="appComp.toHome()" >Virtual Banking APP</span>
   <span class="spacer"></span>
   <button class="navbar-button" mat-fab extended color="accent" (click)="appComp.toRegister()">
