--- a/src/app/tools/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/tools/prog-functional/ejercicio/ejercicio.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="d-flex justify-content-start">
     <button class="btn btn-primary m-3" (click)="nombreMayusculas(baseCustomerss, transformarNombre)">Obtener nombres en mayúsculas</button>
   </div>
@@ -134,4 +134,4 @@
 
 
 
-</div>
+</div> -->
