formulario de SignUp

--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -16,10 +16,11 @@
         <td>{{customer.id}}</td>
         <td>{{customer.documentType.name}}</td>
         <td>{{customer.document}}</td>
-        <td>{{customer.fuulName}}</td>
+        <td>{{customer.fullName}}</td>
         <td>{{customer.email}}</td>
         <td>{{customer.phone}}</td>
         <td>{{customer.password}}</td>
+
       </tr>
     </tbody>
 </table>
