Commit Update User

--- a/src/app/customer-account/my-accounts/my-accounts.component.html
+++ b/src/app/customer-account/my-accounts/my-accounts.component.html
@@ -1,1 +1,47 @@
-<h2>Mis cuentas</h2>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+
+<div class="container">
+    <div class="row">
+      
+        <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-blue order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20">Cuenta Corriente</h6>
+                    <h2 class="text-right"><i class="fa fa-money"></i><span>  $ 486</span></h2>
+                    <p class="m-b-0">Monto Total<span class="f-right"></span></p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-green order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20">Caja de Ahorro</h6>
+                    <h2 class="text-right"><i class="fa fa-money"></i><span>  $ 1290</span></h2>
+                    <p class="m-b-0">Monto Total<span class="f-right"></span></p>
+                </div>
+            </div>
+        </div>
+    
+        <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-yellow order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20">Cotización</h6>
+                    <h2 class="text-right"><i class="fa fa-money"></i><span> USD</span></h2>
+                    <p class="m-b-0">$ 40,30<span class="f-right"></span></p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-pink order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20">Cotización</h6>
+                    <h2 class="text-right"><i class="fa fa-money"></i><span> EUR</span></h2>
+                    <p class="m-b-0">$ 41,86<span class="f-right"></span></p>
+                </div>
+            </div>
+        </div>
+    
+	</div>
+</div>
