--- a/src/app/customer-account/user-profile/user-profile.component.html
+++ b/src/app/customer-account/user-profile/user-profile.component.html
@@ -1,1 +1,118 @@
-<h2>Usuario</h2>
+
+<section class="home"> 
+  <div class="cover"> 
+      
+
+<!--*****************************************MODIFICAR USUARIO*******************************************-->
+
+
+<div class="container">
+  <div class="row gutters">
+  <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
+  <div class="card h-100">
+    <div class="card-body">
+      <div class="account-settings">
+        <div class="user-profile">
+          <div class="user-avatar">
+            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Maxwell Admin">
+          </div>
+          <h5 class="user-name">Bruno Fernández</h5>
+          <h6 class="user-email">dlqq@outlook.com</h6>
+        </div>
+        <div class="about">
+          <h5>Bienvenido!</h5>
+          <p>Aquí podrás modificar todos tus datos.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
+  <div class="card h-100">
+    <div class="card-body">
+      <div class="row gutters">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+          <h6 class="cabeza">Datos Personales</h6>
+        </div>
+        
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+          <div class="form-group">
+            <label for="fullName">Nombre Completo</label>
+            <input type="text" class="form-control" id="fullName" placeholder="Enter full name">
+          </div>
+        </div>
+
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+          <div class="form-group">
+            <label for="eMail">Tipo de Documento</label>
+            <input type="email" class="form-control" id="eMail" placeholder="Enter email ID">
+          </div>
+        </div>
+
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+          <div class="form-group">
+            <label for="phone">Teléfono</label>
+            <input type="text" class="form-control" id="phone" placeholder="Enter phone number">
+          </div>
+        </div>
+
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+          <div class="form-group">
+            <label for="website">Número de Documento</label>
+            <input type="url" class="form-control" id="website" placeholder="Website url">
+          </div>
+        </div>
+
+
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+          <div class="form-group">
+            <label for="sTate">Avatar</label>
+            <input type="text" class="form-control" id="sTate" placeholder="Url imagen">
+          </div>
+        </div>
+      </div>
+
+      <div class="row gutters">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+          <h6 class="cabeza">Credenciales de Acceso</h6>
+        </div>
+
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+          <div class="form-group">
+            <label for="Street">Email</label>
+            <input type="name" class="form-control" id="Street" placeholder="Enter Street">
+          </div>
+        </div>
+        
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+          <div class="form-group">
+            <label for="sTate">Contraseña</label>
+            <input type="text" class="form-control" id="sTate" placeholder="Enter State">
+          </div>
+        </div>
+
+        
+       
+      </div>
+      <div class="row gutters">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+          <div class="text-right">
+
+            <button class="boton"  (click)="true"   >Cancelar</button>
+            <button class="boton"  (click)="true"   >Actualizar</button>
+           
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+  </div>
+
+
+  </div>
+</section>
+
+
+
