--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 .body{
-    background: rgb(255, 255, 255);
+    background: #ffffff;
     position: relative;
     padding-bottom: 4em; /*ESTA PROPIEDAD ES PARA QUE EL FOOTER COLAPSE CONTRA EL BODY*/
     min-height:100vh; /* INDICO AL BODY QUE TIENE QUE MEDIR POR LO MENOS LO QUE MIDE EL VIEWPORT*/
