--- a/src/app/components/login/sign-in/sign-in.component.html
+++ b/src/app/components/login/sign-in/sign-in.component.html
@@ -16,12 +16,12 @@
         <div style="background-color:gray;">
           <mat-form-field class="formFieldSize" appearance="fill" style="margin-top: 20px;">
             <mat-label>e-Mail</mat-label>
-            <input type="text" matInput autocomplete="off" formControlName="username">
+            <input type="text" matInput autocomplete="on" formControlName="username">
           </mat-form-field>
           <br>
           <mat-form-field class="formFieldSize" appearance="fill">
             <mat-label>Password</mat-label>
-            <input type="password" matInput autocomplete="off" formControlName="password">
+            <input type="string" matInput autocomplete="on" formControlName="password">
           </mat-form-field>
         </div>
         <br>
