--- a/src/app/components/login/sign-in/sign-in.component.html
+++ b/src/app/components/login/sign-in/sign-in.component.html
@@ -21,7 +21,7 @@
           <br>
           <mat-form-field class="formFieldSize" appearance="fill">
             <mat-label>Password</mat-label>
-            <input type="string" matInput autocomplete="on" formControlName="password">
+            <input type="password" matInput autocomplete="on" formControlName="password">
           </mat-form-field>
         </div>
         <br>
