changes in user-accounts display

--- a/src/app/dashboard/view/lists/user-accounts/user-accounts.component.html
+++ b/src/app/dashboard/view/lists/user-accounts/user-accounts.component.html
@@ -1,18 +1,34 @@
-<div class="rounded-lg border table w-full">
-  <div class="table-header-group bg-gray-800">
-    <div class="table-row">
-      <div class="table-cell text-left py-3 text-white">ID</div>
-      <div class="table-cell text-left py-3 text-white">Balance</div>
-      <div class="table-cell text-left py-3 text-white">Tipo de cuenta</div>
-      <div class="table-cell text-left py-3 text-white">Estado</div>
-    </div>
-  </div>
-  <div class="table-row-group">
-    <div *ngFor="let account of UserAccountsList" class="table-row transition duration-300 ease-in-out hover:bg-gray-100">
-      <td *ngIf="(account)" class="border-hidden table-cell text-left py-3 whitespace-nowrap">{{account.id}}</td>
-      <td *ngIf="(account)" class="border-hidden table-cell text-left py-3 whitespace-nowrap">{{account.balance}}</td>
-      <td *ngIf="(account)" class="border-hidden table-cell text-left py-3 whitespace-nowrap">{{account.accountType.name}}</td>
-      <td *ngIf="(account)" class="border-hidden table-cell text-left py-3 whitespace-nowrap">{{account.state}}</td>
-    </div>
+<!-- <table class="table-auto border border-collapse rounded-lg w-full mx-auto">
+  <caption></caption>
+  <thead class="bg-gray-800">
+    <tr class="text-white text-left">
+      <th class="py-3">Tipo de cuenta</th>
+      <th class="py-3">Balance</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let account of UserAccountsList" class="transition duration-300 ease-in-out hover:bg-gray-100 border-hidden text-left whitespace-nowrap">
+      <td *ngIf="account && account.state" class="py-3">Caja de {{account.accountType.name.toLowerCase()}}</td>
+      <td *ngIf="account && account.state" class="py-3">{{account.balance}}</td>
+    </tr>
+  </tbody>
+</table>
+ -->
+<div class="flex md:flex-row flex-wrap items-center justify-center">
+  <div *ngFor="let account of UserAccountsList; index as i">
+    <button class="shadow-lg custhover-{{this.colors[i]}} mr-3 md:mr-2 rounded-2xl p-4 my-2">
+      <div class="flex items-center">
+        <div class="inline-flex flex-shrink-0 justify-center items-center w-12 h-12 rounded-lg {{'gradient-' + this.colors[i]}}">
+            <svg class="w-8 h-8" fill="white" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4 4a2 2 0 00-2 2v4a2 2 0 002 2V6h10a2 2 0 00-2-2H4zm2 6a2 2 0 012-2h8a2 2 0 012 2v4a2 2 0 01-2 2H8a2 2 0 01-2-2v-4zm6 4a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd"></path></svg>
+        </div>
+        <div class="ml-3 mt-4 w-40">
+          <span class="text-2xl font-bold leading-none md:text-3xl text-green-500">${{account.balance}}</span>
+          <h3 class="text-base font-normal text-gray-500">Caja de {{account.accountType.name.toLowerCase()}}</h3>
+        </div>
+        <!-- <div class="flex flex-1 justify-end items-center ml-5 w-0 text-base font-bold text-blue-500">
+          {{account.id}}
+        </div> -->
+      </div>
+    </button>
   </div>
 </div>
