--- a/src/app/dashboard/view/view.component.html
+++ b/src/app/dashboard/view/view.component.html
@@ -1,16 +1,12 @@
-<main class="bg-gray-100">
-  <div class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
-    <div class="bg-white shadow sm:rounded-lg">
+<div class="container items-center justify-between">
+  <div class="bg-gray-100 max-w-7xl mx-auto py-6">
+    <div class="bg-white shadow rounded-lg">
       <div class="px-4 py-2">
         <div class="text-2xl font-medium text-gray-900">Mis cuentas:</div>
       </div>
-      <div class="border-t border-gray-200">
-        <dl>
-          <div class="bg-gray-50 px-4 py-2">
-            <app-user-accounts></app-user-accounts>
-          </div>
-        </dl>
+      <div class="border-t border-gray-200 bg-gray-50 px-4 py-2">
+        <app-user-accounts></app-user-accounts>
       </div>
     </div>
   </div>
-</main>
+</div>
