--- a/src/app/customer-account/user-profile/user-profile.component.html
+++ b/src/app/customer-account/user-profile/user-profile.component.html
@@ -1,12 +1,15 @@
 
+
+<!--Background y Transparencia-->
+
 <section class="home"> 
   <div class="cover"> 
       
 
-<!--*****************************************MODIFICAR USUARIO*******************************************-->
+<!--*****************CUSTOMER UPDATE*********************-->
 
 
-<div class="container">
+<div class="container"   *ngIf= "(globalService.switchUserUpdate)">
   <div class="row gutters">
   <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
   <div class="card h-100">
@@ -98,7 +101,7 @@
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
           <div class="text-right">
 
-            <button class="boton"  (click)="true"   >Cancelar</button>
+            <button class="boton"  (click)="(globalService.valorCaseUser = 2)"   >Cancelar</button>
             <button class="boton"  (click)="true"   >Actualizar</button>
            
           </div>
@@ -110,6 +113,87 @@
   </div>
   </div>
 
+<!--******************* CUSTOMER VIEW **********************-->
+
+<section class="section about-section gray-bg" id="about"  *ngIf= "(globalService.switchViewUser)">
+  <div class="container2"   >
+      <div class="row align-items-center flex-row-reverse">
+          <div class="col-lg-6">
+              <div class="about-text go-to">
+                  <h3 class="dark-color">Mi Perfil</h3>
+                  
+
+                  <div class="row about-list">
+                      <div class="col-md-6">
+
+                          <div class="media">
+                              <label>Nombre</label>
+                              <p>Bruno Fernandez</p>
+                          </div>
+
+                          <div class="media">
+                              <label>N° Documento</label>
+                              <p>4280966-4</p>
+                          </div>
+                          
+                          <div class="media">
+                              <label>Tipo de Documento</label>
+                              <p>Cedula</p>
+                          </div>
+
+                      </div>
+                      <div class="col-md-6">
+                          <div class="media">
+                              <label>E-mail</label>
+                              <p>info@domain.com</p>
+                          </div>
+                          <div class="media">
+                              <label>Phone</label>
+                              <p>820-885-3321</p>
+                          </div>
+                          
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6">
+              <div class="about-avatar">
+                  <img src="https://bootdey.com/img/Content/avatar/avatar7.png" title="" alt="">
+              </div>
+          </div>
+      </div>
+<!--LO BLANCO-->
+
+      <div class="counter">
+          <div class="row">
+
+              <div class="col-6 col-lg-3">
+                  <div class="count-data text-center">
+                      <h6 class="count h2" data-to="500" data-speed="500">$ 500</h6>
+                      <p class="m-0px font-w-600">Cuenta Corriente</p>
+                  </div>
+              </div>
+              
+              <div class="col-6 col-lg-3">
+                  <div class="count-data text-center">
+                      <h6 class="count h2" data-to="850" data-speed="850">$ 850</h6>
+                      <p class="m-0px font-w-600">Caja de Ahorro</p>
+                  </div>
+              </div>                                          
+
+          </div>
+      </div>
+  </div>
+
+  <div class= "content-buttom">
+      <button class="boton2"  (click)="(globalService.valorCaseUser = 1)"   >Editar</button>
+  </div>
+  
+</section>
+
+
+
+<!--FIN Background y Transparencia-->
 
   </div>
 </section>
