--- a/src/app/customer-account/user-profile/user-profile.component.scss
+++ b/src/app/customer-account/user-profile/user-profile.component.scss
@@ -2,7 +2,7 @@
 
 .home {
     width: 100%;
-    height: 120vh; //este valor marca el alto de mi fondo
+    height: 100vh; //este valor marca el alto de mi fondo
     background-image: url("https://images.unsplash.com/photo-1435575653489-b0873ec954e2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80");
     background-size: cover;
     background-position: center;
@@ -11,7 +11,7 @@
   
   .cover{
     width: 100%;
-    height: 120vh; //este valor marca el alto de mi fondo
+    height: 100vh; //este valor marca el alto de mi fondo
     background-color: rgba(0, 0, 0, 0.36); //DE ESTA MANERA LA OPACIDAD SOLO SE LE HACE A ESTE ELEMENTO Y NO A LO QUE ESTA DENTRO DE EL
     display: flex;
     align-items: center;
@@ -136,3 +136,142 @@ body {
     background-color: #5eaefff2;
   }
 
+//**********************************CUSTOMER VIEW**********************************
+
+  
+.container2{
+    position: relative;
+    justify-content: center;
+    
+  }
+
+// TAMAÑO DE LA TARJETA
+  body{
+    color: #6F8BA4;   
+}
+
+.media{
+    width: 130PX;
+    
+}
+
+.section {
+    padding: 80px ;
+    position: relative;   
+}
+
+.gray-bg {
+    background-color: #212127; //COLOR DE LA TARJETA
+    color: #ffffff;
+ 
+}
+
+
+img {
+    max-width: 60%;
+    margin-left: 40px;
+    margin-bottom: 20px;
+}
+img {
+    vertical-align: middle;
+    border-style: none;
+    
+}
+
+//TITULO DE LA TARJETA
+.about-text h3 {
+  font-size: 40px;
+  font-weight: 500;
+  // margin: 0 0 6px;
+  
+}
+
+//LETRAS DE LOS DATOS DE USUARIO
+.about-list {
+  padding-top: 10px;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.about-list .media {
+  padding: 5px 0;
+  width: 150PX;
+}
+
+.about-list label {
+  color: #fe6047;
+  font-weight: 500;
+  width: 150px;
+  margin: 0;
+  position: relative;
+  font-size: 14px;
+}
+
+//TAMAÑO LETRAS BLANCAS DE LOS DATOS
+.about-list p {
+  margin: 0;
+  font-size: 16px;
+  width: 150PX;
+}
+
+//cosa blanca
+.about-section .counter {
+  padding: 18px 18px;
+  background: #ffffff;
+  border-radius: 0px;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  color: #000000;
+
+}
+.about-section .counter .count-data {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  
+  
+}
+.about-section .counter .count {
+  font-weight: 700;
+  color: #20247b;
+  margin: 0 0 5px;
+  
+
+}
+.about-section .counter p {
+  font-weight: 600;
+  margin: 0;
+  
+}
+
+.theme-color {
+    color: #fc5356;
+}
+.dark-color {
+    color: #85caff;
+}
+
+//****************************************BOTON************************************************
+
+.content-buttom{
+    display: flex;
+    justify-content: right;
+
+}
+
+.boton2 {
+    width: 100%;
+    background: #fe6047;
+    border: none;
+    padding: 12px;
+    color: white;
+    //margin: 18px 0;
+    font-size: 16px;
+    
+    margin-left: 20px;
+    margin-top: 30px;
+    
+  }
+    
+  .boton2:hover{
+    background-color: #5eaefff2;
+  }
