--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -2,15 +2,15 @@
 
 
 
-<section class="form-register"  *ngIf= "(serviceLogIn.switchLogIn)"  >
+<section class="form-register"  *ngIf= "(globalService.switchLogIn)"  >
   <h4>Sign In</h4>
   <form>
     <input class="controls" type="text" id="tipo" name="tipo"  placeholder="Usuario">
     <input class="controls" type="text" id="nombre" name="nombre"  placeholder="Contraseña">
     
-    <button class="boton"  (click)="serviceLogIn.activeLogged()"   >Sign In</button>
+    <button class="boton"  (click)="globalService.activeLogged()"   >Sign In</button>
     
-    <p>No tienes una cuenta?</p> <a class= "link" (click)="(serviceLogIn.valorForm = 2)" >Registrate!</a>
+    <p>No tienes una cuenta?</p> <a class= "link" (click)="(globalService.valorCaseLogin = 2)" >Registrate!</a>
   </form>
 </section>
 
