--- a/src/app/login/singup/singup.component.html
+++ b/src/app/login/singup/singup.component.html
@@ -2,7 +2,7 @@
 
 
 
-<section class="form-register"  *ngIf= "(serviceLogIn.switchLogUp)" >
+<section class="form-register"  *ngIf= "(globalService.switchLogUp)" >
   <h4>Sign Up</h4>
   <form>
     <input class="controls" type="text" id="tipo" name="tipo"  placeholder="Usuario">
@@ -16,7 +16,7 @@
      
     <button class="boton"  (click)="true"  >Sign Up</button>
    
-    <p>Ya estás registrado?</p> <a class= "link" (click)="(serviceLogIn.valorForm = 1)" >Ingresar!</a>
+    <p>Ya estás registrado?</p> <a class= "link" (click)="(globalService.valorCaseLogin = 1)" >Ingresar!</a>
   </form>
 </section>
 
