search para customer Id

--- a/src/app/components/find-by-one-id/find-by-one-id.component.html
+++ b/src/app/components/find-by-one-id/find-by-one-id.component.html
@@ -1,1 +1,5 @@
-<p>find-by-one-id works!</p>
+<label style="margin: 2%;">Id</label>
+<form (ngsubmit)="onSubmit()" class="d-flex" [formGroup]="formCustomer" role="search">
+    <input class="form-control me-2"  formControlName="searchId"  type="search" placeholder="Search" aria-label="Search">
+    <button [disabled]="formCustomer.invalid" class="btn btn-outline-success" (click)="searchCustomerId()" type="submit">Search</button>
+</form>
