--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -27,6 +27,10 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/deposit">Deposit</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/search">buscador</a>
+          </li>
           
         </ul>
       </div>
